--- a/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
+++ b/d3dcompiler_47_og/d3dcompiler_47_og.vcxproj.filters
@@ -87,7 +87,7 @@
       <Filter>Header Files\General</Filter>
     </ClInclude>
     <ClInclude Include="Functions.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\General</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
