Added proxy functinality.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Perfect Storm/v16
+/bin/Dll_Release
+/build/Dll_Release
